Added unit tests
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -423,6 +423,11 @@ mosip.preregistration.demographic.retrieve.date.id=mosip.pre-registration.demogr
 #id for demographic delete application
 mosip.preregistration.demographic.delete.id=mosip.pre-registration.demographic.delete
 
+mosip.id.preregistration.lostuin.create=mosip.pre-registration.lostuin.create
+mosip.id.preregistration.lostuin.delete=mosip.pre-registration.lostuin.delete
+mosip.id.preregistration.updateregistration.create=mosip.pre-registration.updateregistration.create
+mosip.id.preregistration.updateregistration.delete=mosip.pre-registration.updateregistration.delete
+
 #page size to define the number of pages for demographic service
 mosip.pregistration.pagesize=20
 
