--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -195,7 +195,7 @@
 						</executions>
 						<configuration>
 							<apiDocsUrl>http://localhost:9094/preregistration/v1/v3/api-docs/Pre-Registration-Datasync</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<outputFileName>${name}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
