added missing unit tests
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -5,6 +5,9 @@ javax.persistence.jdbc.password=
 
 server.servlet.context-path=/preregistration/v1
 
+logging.level.org.springframework.web: DEBUG
+logging.level.org.springframework.security: DEBUG
+    
 mosip.notification.timezone=GMT+05:30
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -681,6 +684,11 @@ mosip.preregistration.login.id.validateotp=mosip.pre-registration.login.useridot
 mosip.preregistration.login.id.invalidatetoken=mosip.pre-registration.login.invalidate
 mosip.preregistration.login.id.config=mosip.pre-registration.login.config
 
+mosip.id.preregistration.login.sendotp: mosip.pre-registration.login.sendotp
+mosip.id.preregistration.login.validateotp: mosip.pre-registration.login.useridotp
+mosip.preregistration.login.service.version: 1.0
+mosip.preregistration.sendotp.id: mosip.pre-registration.login.sendotp
+mosip.preregistration.validateotp.id: mosip.pre-registration.login.useridotp
 
 registrationcenter.centerdetail.rest.uri=https://dev.mosip.net/v1/masterdata/
 
@@ -702,7 +710,7 @@ mosip.mandatory-languages=eng
 mosip.optional-languages=fra,ara
 mosip.kernel.otp.expiry-time=1800
 mosip.lang.traslate.adapter.impl.basepackage = io.mosip.kernel.transliteration.icu4j
-
+mosip.preregistration.sendotp.allowapi=false
 mosip.preregistration.captcha.resourse.url=${mosip.base.url}/preregistration/v1/captcha/validatecaptcha
 mosip.preregistration.captcha.enable=true
 mosip.preregistration.captcha.sitekey=6Lc4pewUAAAAANr3JkwuSVNCzQi9Z31g-NVKMXBX
@@ -813,10 +821,7 @@ mosip.role.prereg.postappointmentmulti=REGISTRATION_OFFICER,INDIVIDUAL
 
 mosip.role.prereg.updateapplicationstatusappid=REGISTRATION_OFFICER,INDIVIDUAL
 mosip.role.prereg.getapplicationdetailsappid=REGISTRATION_OFFICER,INDIVIDUAL
-
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
-mosip.id.preregistration.lostuin.delete=mosip.pre-registration.lostuin.delete
-mosip.id.preregistration.updateregistration.delete=mosip.pre-registration.updateregistration.delete
 mosip.preregistration.applications.all.get = mosip.preregistration.applications.all
-preregistration.cookie.contextpath=/preregistration/
+preregistration.cookie.contextpath=/
 mosip.preregistration.booking.book.id=mosip.pre-registration.booking.book
+mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
