ignoring interface from coverage
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -147,6 +147,7 @@
 			**/batchjob/**,
 			**/util/**,
 			**/stateUtil/**,
+			**/preregistration/application/service/*Intf.java,
 			**/preregistration/application/dto/*.java,
 			**/preregistration/application/dto/ApplicantTypeCodeDTO.java,
 			**/preregistration/application/dto/ApplicantTypeKeyValueDTO.java,
