--- a/pre-registration/pre-registration-captcha-service/pom.xml
+++ b/pre-registration/pre-registration-captcha-service/pom.xml
@@ -176,7 +176,7 @@
 						</executions>
 						<configuration>
 							<apiDocsUrl>http://localhost:9089/preregistration/v1/captcha/v3/api-docs/Pre-Registration-captcha</apiDocsUrl>
-							<outputFileName>${name}-openapi.json</outputFileName>
+							<outputFileName>${artifactId}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
