--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -818,3 +818,8 @@ mosip.preregistration.applications.all.get = mosip.preregistration.applications.
 preregistration.cookie.contextpath=/
 mosip.preregistration.booking.book.id=mosip.pre-registration.booking.book
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+
+auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/ 
+mosip.iam.adapter.clientid=mosip-prereg-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=prereg
