MOSIP-19942,MOSIP-20359,MOSIP-20383 fixed
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.cloud.config.uri=https://dev.mosip.net/config
-spring.cloud.config.label=develop
+spring.cloud.config.label=develop-v2
 spring.cloud.config.name=pre-registration
 spring.application.name=pre-registration-application-service
-spring.profiles.active=mz
+spring.profiles.active=default
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=info,health,refresh
 
@@ -67,7 +67,7 @@ email.service.contextpath: notifier
 email.service.env: ${mosip.base.url}
 emailResourse.url: ${mosip.base.url}/v1/notifier/email/send
 expiredStatus.url: ${mosip.base.url}/preregistration/v1/batch/expiredStatus
-global.config.file: application.properties
+global.config.file: application-${spring.profiles.active}.properties
 mosip.preregistration.captcha.sitekey=6Lc4pewUAAAAANr3JkwuSVNCzQi9Z31g-NVKMXBX
 mosip.preregistration.captcha.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
 mosip.preregistration.captcha.secretkey=6Lc4pewUAAAAAOq_6rlW8HcGX36rF9vVla32TvqI
@@ -351,51 +351,44 @@ id-masterdata-template-service-multilang.rest.uri=${mosip.base.url}/v1/masterdat
 mosip.preregistration.captcha.resourse.url=${mosip.base.url}/preregistration/v1/captcha/validatecaptcha
 
 
-mosip.role.prereg.postapplications=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.putapplications=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getapplications=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.putapplicationsstatus=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getapplicationsall=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getapplicationsstatus=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.deleteapplications=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postapplicationsupdatedtime=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getapplicationsconfig=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getapplicationsinfo=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postlogaudit=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postdocumentspreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.putdocumentspreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getdocumentsdocumentid=REGISTRATION_OFFICER,INDIVIDUAL
+mosip.role.prereg.postapplications=INDIVIDUAL,REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.putapplications=INDIVIDUAL,REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getapplications=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.putapplicationsstatus=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.getapplicationsall=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getapplicationsstatus=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.deleteapplications=INDIVIDUAL,REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.postapplicationsupdatedtime=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
+mosip.role.prereg.getapplicationsconfig=INDIVIDUAL
+mosip.role.prereg.getapplicationsinfo=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.postlogaudit=REGISTRATION_OFFICER,INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.postdocumentspreregistrationid=INDIVIDUAL
+mosip.role.prereg.putdocumentspreregistrationid=INDIVIDUAL
+mosip.role.prereg.getdocumentsdocumentid=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,INDIVIDUAL
 mosip.role.prereg.getdocumentspreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.deletedocumentsdocumentid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.deletedocumentspreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.putdocumentsdocumentid=REGISTRATION_OFFICER,INDIVIDUAL
+mosip.role.prereg.deletedocumentsdocumentid=INDIVIDUAL
+mosip.role.prereg.deletedocumentspreregistrationid=INDIVIDUAL
+mosip.role.prereg.putdocumentsdocumentid=INDIVIDUAL,REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
 mosip.role.prereg.postqrcodegenerate=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postloginsendotp=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postloginsendotplangcode=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postloginvalidateotp=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postlogininvalidatetoken=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getconfig=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getrefreshconfig=INDIVIDUAL
-mosip.role.prereg.postnotificationnotify=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postnotification=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getpostproxy=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.posttransliterationtransliterate=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getuispeclatest=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getuispecall=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postpreregsync=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getsyncpreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getsyncpreregistrationidmachineid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postsyncconsumedpreregids=REGISTRATION_OFFICER,INDIVIDUAL
+mosip.role.prereg.getrefreshconfig=PRE_REGISTRATION_ADMIN
+mosip.role.prereg.postnotificationnotify=REGISTRATION_OFFICER,INDIVIDUAL,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.postnotification=INDIVIDUAL,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.posttransliterationtransliterate=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,INDIVIDUAL
+mosip.role.prereg.getuispeclatest=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,INDIVIDUAL
+mosip.role.prereg.getuispecall=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,INDIVIDUAL
+mosip.role.prereg.postpreregsync=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getsyncpreregistrationid=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getsyncpreregistrationidmachineid=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.postsyncconsumedpreregids=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
 mosip.role.prereg.getslotsavailablity=REGISTRATION_OFFICER,INDIVIDUAL
 mosip.role.prereg.getappointmentdetailspreregid=REGISTRATION_OFFICER,INDIVIDUAL
 mosip.role.prereg.postappointmentpregid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.deleteappointmentpreregid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.cancelappointmentpreregid=REGISTRATION_OFFICER,INDIVIDUAL
+mosip.role.prereg.cancelappointmentpreregid=REGISTRATION_OFFICER,INDIVIDUAL,PRE_REGISTRATION_ADMIN
+mosip.role.prereg.deleteappointmentpreregid=REGISTRATION_OFFICER,INDIVIDUAL,PRE_REGISTRATION_ADMIN
 mosip.role.prereg.postappointmentmulti=REGISTRATION_OFFICER,INDIVIDUAL
 
 mosip.role.prereg.updateapplicationstatusappid=REGISTRATION_OFFICER,INDIVIDUAL
 mosip.role.prereg.getapplicationdetailsappid=REGISTRATION_OFFICER,INDIVIDUAL
-
 
 mosip.preregistration.appointment.getavailablity.url=${mosip.base.url}/preregistration/v1/appointment/availability/{registrationCenterId}
 mosip.preregistration.appointment.book.url=${mosip.base.url}/preregistration/v1/appointment/{preRegistrationId}
@@ -422,10 +415,10 @@ mosip.iam.adapter.appid=prereg
 auth.server.admin.issuer.uri=${mosip.base.url}/keycloak/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip',idrepo:'mosip',hotlist:'mosip'}
 
 # To validate the issued audience/azp of the auth token in offline token validation.t
-auth.server.admin.allowed.audience=
+auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-reg-client
 
 #the custom auth provider component names list
 #mosip.security.authentication.provider.beans.list=customJWTAuthProvider
