--- a/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
@@ -403,10 +403,10 @@ preregistration.crypto.PrependThumbprint=false
 preregistration.crypto.applicationId=PRE_REGISTRATION
 mosip.mandatory-languages=ara,eng
 mosip.optional-languages=fra,ara
-mosip.role.prereg.postpreregsync=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getsyncpreregistrationid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.getsyncpreregistrationidmachineid=REGISTRATION_OFFICER,INDIVIDUAL
-mosip.role.prereg.postsyncconsumedpreregids=REGISTRATION_OFFICER,INDIVIDUAL
+mosip.role.prereg.postpreregsync=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getsyncpreregistrationid=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.getsyncpreregistrationidmachineid=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN
+mosip.role.prereg.postsyncconsumedpreregids=REGISTRATION_OFFICER,REGISTRATION_SUPERVISOR,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
 
 mosip.preregistration.sync.sign.appid=KERNEL
 mosip.preregistration.sync.sign.refid=SIGN
@@ -421,7 +421,7 @@ mosip.iam.adapter.appid.pre-registration-datasync-service=registrationclient
 auth.server.admin.issuer.uri=${mosip.base.url}/keycloak/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
 # To validate the issued audience/azp of the auth token in offline token validation.t
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-reg-client
