--- a/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
@@ -142,7 +142,7 @@ mosip.preregistration.sync.sign.appid=KERNEL
 mosip.preregistration.sync.sign.refid=SIGN
 
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
 preregistration.config.identityjson=
 preregistration.identity=
