--- a/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
@@ -408,7 +408,7 @@ mosip.iam.adapter.appid=prereg
 auth.server.admin.issuer.uri=${mosip.base.url}/keycloak/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
 # To validate the issued audience/azp of the auth token in offline token validation.t
 auth.server.admin.allowed.audience=
