[MOSIP-18192] Added new Template for Cancel Appointment Email Subject
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
@@ -57,6 +57,7 @@ document.service.env: ${mosip.base.url}
 document.service.version: v1
 email.acknowledgement.subject.template: Acknowledgement-email-subject
 email.acknowledgement.template: Email-Acknowledgement
+cancel.appointment.email.subject: cancel-appointment-email-subject
 email.service.contextpath: notifier
 email.service.env: ${mosip.base.url}
 emailResourse.url: ${mosip.base.url}/v1/notifier/email/send
