--- a/pre-registration/pre-registration-captcha-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-captcha-service/src/main/resources/application.properties
@@ -300,6 +300,9 @@ email.acknowledgement.template=Email-Acknowledgement
 # Email template subject
 email.acknowledgement.subject.template=Acknowledgement-email-subject
 
+# Email subject template for Cancel Appointment
+cancel.appointment.email.subject: cancel-appointment-email-subject
+
 # sms template
 sms.acknowledgement.template=SMS-Acknowledgement
 
