--- a/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
@@ -28,6 +28,7 @@ booking.service.env=booking
 dev.dns.url=http://localhost
 email.acknowledgement.template=Email-Acknowledgement
 email.acknowledgement.subject.template=Acknowledgement-email-subject
+cancel.appointment.email.subject=cancel-appointment-email-subject
 sms.acknowledgement.template=SMS-Acknowledgement
 demographic.resource.url=${dev.dns.url}:9092/pre-registration/${demographic.service.version}/${demographic.service.env}
 document.resource.url=${dev.dns.url}:9093/pre-registration/${document.service.version}/${documnet.service.env}
