--- a/pre-registration/pre-registration-core/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-core/src/test/resources/application.properties
@@ -22,6 +22,7 @@ email.acknowledgement.template=Email-Acknowledgement
 email.acknowledgement.subject.template=Acknowledgement-email-subject
 sms.acknowledgement.template=SMS-Acknowledgement
 cancel.appoinment.template=cancel-appointment
+cancel.appointment.email.subject=cancel-appointment-email-subject
 #Pre-registration Id length
 prereg_id.length=16
 
