MOSIP-20249 code cleanup
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -285,8 +285,8 @@ preregistration.job.schedule.cron.slotavailability: 0 0 0 * * ?
 preregistration.nearby.centers: 2000
 preregistration.preid.regex: [0-9]+
 preregistration.recommended.centers.locCode: 5
-preregistration.timespan.cancel: 24
-preregistration.timespan.rebook: 24
+preregistration.timespan.cancel: 0
+preregistration.timespan.rebook: 0
 preregistration.workflow.booking: true/false
 preregistration.workflow.demographic: true/false
 preregistration.workflow.documentupload: true/false
@@ -304,7 +304,7 @@ spring.batch.tablePrefix: PREREG.BATCH_
 spring.servlet.multipart.max-file-size: -1
 spring.servlet.multipart.max-request-size: -1
 mosip.notification.timezone : GMT+05:30
-ui.config.params: preregistration.availability.sync,preregistration.availability.noOfDays,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable,google.recaptcha.site.key,mosip.adult.age,mosip.idschema.version
+ui.config.params=preregistration.availability.sync,preregistration.availability.noOfDays,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable,mosip.preregistration.captcha.sitekey,mosip.adult.age,mosip.idschema.version,mosip.preregistration.captcha.enable,preregistration.identity.name,preregistration.ui.version,preregistration.contact.email,preregistration.contact.phone
 updateConsumedStatus.url: http://prereg-batchjob-service/preregistration/v1/batch/consumedStatus
 userIdType: USERID
 validationStatus: success
@@ -318,10 +318,10 @@ prereg.auth.jwt.token.expiration=1800
 prereg.auth.jwt.token.roles=INDIVIDUAL
 prereg.auth.jwt.audience = "account";
 prereg.auth.jwt.scope = PRE-REGISTRATION;
-mosip.mandatory-languages=hin,eng
-mosip.optional-languages=fra,kan
+mosip.mandatory-languages=eng
+mosip.optional-languages=fra,ara
 mosip.min-languages.count=1
-mosip.max-languages.count=6abc
+mosip.max-languages.count=3
 preregistration.crypto.referenceId=INDIVIDUAL
 preregistration.crypto.PrependThumbprint=false
 preregistration.crypto.applicationId=PRE_REGISTRATION
