--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -92,7 +92,6 @@ spring.cloud.config.uri=https://dev.mosip.net/config
 management.endpoints.web.exposure.include=refresh
 
 auth.server.validate.url=https://qa.mosip.net/authmanager/v1/authorize/validateToken 
-ui.config.params=preregistration.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.booking.offset,preregistration.auto.logout,preregistration.rebook.timespan,preregistration.cancel.timespan,preregistration.book.days,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.regex.email,mosip.regex.postalCode,mosip.regex.textField,mosip.regex.phone,mosip.regex.DOB,mosip.regex.CNIE,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.default.dob,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length
 
 mosip.id.validation.identity.dateOfBirth=
 mosip.id.validation.identity.postalCode=
@@ -640,7 +639,7 @@ mosip.id.pre-registration.transliteration.transliterate=mosip.pre-registration.t
 mosip.pre-registration.transliteration.transliterate.id=mosip.pre-registration.transliteration.transliterate
 #--------UI params---------
 # List of keys which UI will consume
-ui.config.params=preregistration.availability.sync,preregistration.availability.noOfDays,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable,google.recaptcha.site.key
+ui.config.params=preregistration.availability.sync,preregistration.availability.noOfDays,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable,mosip.preregistration.captcha.sitekey,mosip.adult.age,mosip.idschema.version,mosip.preregistration.captcha.enable,preregistration.identity.name,preregistration.ui.version,preregistration.contact.email,preregistration.contact.phone
 # This config is used for loading recommended centers based on the value of the config. The value depicts the location hierarchy code of the hierarchy based on which the recommended centers is loaded
 preregistration.recommended.centers.locCode=5
 
@@ -823,3 +822,8 @@ auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
 mosip.iam.adapter.clientid=mosip-prereg-client
 mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=prereg
+
+mosip.mandatory-languages=eng
+mosip.optional-languages=fra,ara
+mosip.min-languages.count=1
+mosip.max-languages.count=3
