MOSIP-20249 removed unused properties
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -68,7 +68,7 @@ email.service.contextpath: notifier
 email.service.env: ${mosip.base.url}
 emailResourse.url: ${mosip.base.url}/v1/notifier/email/send
 expiredStatus.url: ${mosip.base.url}/preregistration/v1/batch/expiredStatus
-global.config.file: application-${spring.profiles.active}.properties
+#global.config.file: application-${spring.profiles.active}.properties
 mosip.preregistration.captcha.sitekey=6Lc4pewUAAAAANr3JkwuSVNCzQi9Z31g-NVKMXBX
 mosip.preregistration.captcha.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
 mosip.preregistration.captcha.secretkey=6Lc4pewUAAAAAOq_6rlW8HcGX36rF9vVla32TvqI
@@ -263,7 +263,7 @@ poa.url: proofOfAddress
 pod.url: proofOfDateOfBirth
 poi.url: proofOfIdentity
 por.url: proofOfRelationship
-pre.reg.config.file: pre-registration-${spring.profiles.active}.properties
+#pre.reg.config.file: pre-registration-${spring.profiles.active}.properties
 preregistration.config.identityjson = identity-mapping.json
 preregistration.demographicDetails: demographicDetails
 preregistration.identity: identity
