--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -80,8 +80,8 @@ mosip.kernel.prid.length=
 preregistration.preid.regex=
 auth.server.validate.url=
 
-global.config.file=application-mz.properties
-pre.reg.config.file=pre-registration-mz.properties
+#global.config.file=application-mz.properties
+#pre.reg.config.file=pre-registration-mz.properties
 
 spring.cloud.config.uri=https://dev.mosip.net/config
 # spring.cloud.config.label=develop
@@ -597,7 +597,7 @@ sms.acknowledgement.template=SMS-Acknowledgement
 global.config.file=application-${spring.profiles.active}.properties
 
 #Pre-reg config file name
-pre.reg.config.file=pre-registration-${spring.profiles.active}.properties
+#pre.reg.config.file=pre-registration-${spring.profiles.active}.properties
 
 mosip.pre-registration.notification.id=mosip.pre-registration.notification.notify
 
