--- a/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
@@ -62,7 +62,7 @@ email.service.contextpath: notifier
 email.service.env: ${mosip.base.url}
 emailResourse.url: ${mosip.base.url}/v1/notifier/email/send
 expiredStatus.url: ${mosip.base.url}/preregistration/v1/batch/expiredStatus
-global.config.file: application.properties
+#global.config.file: application.properties
 google.recaptcha.secret.key: 6LckJrsZAAAAALvljaAYG767llIAPdVFwRTeD_bQ
 google.recaptcha.site.key: 6LckJrsZAAAAANEZDeHcKteBRT2iMKE42ou4idGG
 google.recaptcha.verify.url: https://www.google.com/recaptcha/api/siteverify
@@ -340,7 +340,7 @@ poa.url: proofOfAddress
 pod.url: proofOfDateOfBirth
 poi.url: proofOfIdentity
 por.url: proofOfRelationship
-pre.reg.config.file: pre-registration-${spring.profiles.active}.properties
+#pre.reg.config.file: pre-registration-${spring.profiles.active}.properties
 preregistration.config.identityjson: identity-mapping.json
 preregistration.demographicDetails: demographicDetails
 preregistration.identity: identity
