--- a/pre-registration/pre-registration-captcha-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-captcha-service/src/main/resources/application.properties
@@ -307,10 +307,10 @@ cancel.appointment.email.subject: cancel-appointment-email-subject
 sms.acknowledgement.template=SMS-Acknowledgement
 
 # Global config file name
-global.config.file=application-${spring.profiles.active}.properties
+#global.config.file=application-${spring.profiles.active}.properties
 
 #Pre-reg config file name
-pre.reg.config.file=pre-registration-${spring.profiles.active}.properties
+#pre.reg.config.file=pre-registration-${spring.profiles.active}.properties
 
 mosip.pre-registration.notification.id=mosip.pre-registration.notification.notify
 
