[MOSIP-21206] renamed application prop and removed plain txt pwds
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application-local.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application-local.properties
@@ -79,7 +79,7 @@ hibernate.show_sql: false
 holiday.exceptional.url: ${mosip.base.url}/v1/masterdata/exceptionalholidays/
 holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: mosip123
+javax.persistence.jdbc.password: 
 javax.persistence.jdbc.url=jdbc:postgresql://dev.mosip.net:30090/mosip_prereg
 javax.persistence.jdbc.user: postgres
 kernel.auth.contextpath: authmanager
@@ -103,7 +103,7 @@ masterdata.service.version: v1
 max.file.size: 2
 mosip.adult.age: 5
 mosip.batch.token.authmanager.appId: prereg
-mosip.batch.token.authmanager.password: abc123
+mosip.batch.token.authmanager.password: 
 mosip.batch.token.authmanager.url: ${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
 mosip.batch.token.authmanager.userName: mosip-prereg-client
 mosip.batch.token.request.id: 
@@ -293,7 +293,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: abc123
+secretKey: 
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
@@ -409,7 +409,7 @@ preregistration.cookie.contextpath=/preregistration/
 
 # To generate token from keycloak. Use by kernel auth adapter.
 mosip.iam.adapter.clientid=mosip-prereg-client
-mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.clientsecret=
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
