created one more dto and added junit test cases
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -25,6 +25,7 @@ mosip.id.preregistration.updateregistration.create=mosip.pre-registration.update
 mosip.id.preregistration.updateregistration.delete=mosip.pre-registration.updateregistration.delete
 mosip.id.preregistration.miscellaneouspurpose.create=mosip.pre-registration.miscellaneouspurpose.create
 mosip.id.preregistration.miscellaneouspurpose.delete=mosip.pre-registration.miscellaneouspurpose.delete
+mosip.preregistration.miscellaneouspurpose.length=200
 mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.create
 mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
 mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
