fixed minor issue in build failure
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
@@ -147,3 +147,4 @@ mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclien
 
 preregistration.config.identityjson=
 preregistration.identity=
+mosip.preregistration.miscellaneouspurpose.length=200
