--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -133,13 +133,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_token }}
         GPG_TTY: $(tty)
-    - uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
-      if: failure() # Pick up events even if the job fails or is canceled.
+  # - uses: 8398a7/action-slack@v3
+    # with:
+    #   status: ${{ job.status }}
+    #   fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+    # env:
+    #   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
+    # if: failure() # Pick up events even if the job fails or is canceled.
 
 
 
