MOSIP-22161 added syncV2 api and tested with V3
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.cloud.config.uri=https://dev.mosip.net
+spring.cloud.config.uri=https://localhost:8080
 spring.cloud.config.label=develop
 spring.cloud.config.name=pre-registration
 spring.application.name=pre-registration-application-service
