--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.cloud.config.uri=https://dev.mosip.net/config
-spring.cloud.config.label=develop-v2
+spring.cloud.config.uri=https://localhost:8080
+spring.cloud.config.label=develop
 spring.cloud.config.name=pre-registration
 spring.application.name=pre-registration-application-service
 spring.profiles.active=default
@@ -30,14 +30,14 @@ mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.c
 mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
 mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
 appId: prereg
-mosip.base.url=https://dev.mosip.net
+mosip.base.url=https://api-internal.dev3.mosip.net
 application.id: pre-registration
 appointmentResourse.url: ${mosip.base.url}/preregistration/v1
 audit.service.contextpath: auditmanager
 audit.service.env: http://kernel-auditmanager-service
 audit.url: ${mosip.base.url}/v1/auditmanager/audits
-auth-token-generator.rest.issuerUrl:${mosip.base.url}/keycloak/auth/realms/preregistration
-auth.server.admin.validate.url:https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth-token-generator.rest.issuerUrl:https://iam.dev3.mosip.net/auth/realms/mosip
+auth.server.admin.validate.url:${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 auth.server.validate.url: ${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 batch.appointment.cancel: ${mosip.base.url}/preregistration/v1/internal/applications/appointment/{preRegistrationId}
 batch.resource.url: ${mosip.base.url}/preregistration/v1/batch
@@ -82,8 +82,8 @@ hibernate.show_sql: false
 holiday.exceptional.url: ${mosip.base.url}/v1/masterdata/exceptionalholidays/
 holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: mosip123
-javax.persistence.jdbc.url=jdbc:postgresql://dev.mosip.net:30090/mosip_prereg
+javax.persistence.jdbc.password: 
+javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev3.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 kernel.auth.contextpath: authmanager
 kernel.auth.env: ${mosip.base.url}
@@ -106,7 +106,7 @@ masterdata.service.version: v1
 max.file.size: 2
 mosip.adult.age: 5
 mosip.batch.token.authmanager.appId: prereg
-mosip.batch.token.authmanager.password: abc123
+mosip.batch.token.authmanager.password: 
 mosip.batch.token.authmanager.url: ${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
 mosip.batch.token.authmanager.userName: mosip-prereg-client
 mosip.batch.token.request.id: 
@@ -296,7 +296,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: abc123
+secretKey: 
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
@@ -412,11 +412,11 @@ preregistration.cookie.contextpath=/preregistration/
 
 # To generate token from keycloak. Use by kernel auth adapter.
 mosip.iam.adapter.clientid=mosip-prereg-client
-mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.clientsecret=
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
-auth.server.admin.issuer.uri=${mosip.base.url}/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://iam.dev3.mosip.net/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip',idrepo:'mosip',hotlist:'mosip'}
